Fixxing Gap

--- a/default.css
+++ b/default.css
@@ -926,6 +926,7 @@ span{
     }
 
     .content-home{
+        margin-top: 3rem;
         flex-direction: column;
         font-size: 110%;
         gap: 3rem;
